objects/ccrz__E_Coupon__c.object
<CustomObject>
    <description>Coupons provide special pricing Rules that can be applied to User&apos;s Carts and Orders</description>
    <fields>
        <fullName>DBU_Promotion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DBU Promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DN_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>DN Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dbu_Gift_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This identifies that this Coupon is Dbu Gift Card.</description>
        <inlineHelpText>This identifies that this Coupon is Dbu Gift Card.</inlineHelpText>
        <label>Dbu Gift Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSM_Coupon_Discount_Target_Type__c</fullName>
        <defaultValue>&quot;MSRP&quot;</defaultValue>
        <description>related to discount type if MSRP or DN or MSRP/DN</description>
        <label>OSM Coupon Discount Target Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DN</fullName>
                    <default>true</default>
                    <label>DN</label>
                </value>
                <value>
                    <fullName>MSRP</fullName>
                </value>
                <value>
                    <fullName>MSRP/DN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <formula>ccrz__TargetProduct__r.ccrz__SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>$User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Migration_Coupon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Migration Coupon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__CartTotalAmount__c</fullName>
        <description>Cart total amount to be qualified to have discount</description>
        <label>Cart Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__CouponCode__c</fullName>
        <description>Coupon Code</description>
        <label>Coupon Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CouponId__c</fullName>
        <externalId>true</externalId>
        <label>Coupon Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__CouponName__c</fullName>
        <description>Coupon Name</description>
        <label>Coupon Name</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CouponType__c</fullName>
        <label>Coupon Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ccrz__RuleType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Coupon_Notes__c</fullName>
        <description>Admin description of what a coupon is intended to do</description>
        <inlineHelpText>Please enter the description of what the coupon is suppose to accomplish</inlineHelpText>
        <label>Coupon Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CurrencyISOCode__c</fullName>
        <description>The currency for which this coupon is valid</description>
        <label>Currency ISO Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__DiscountAmount__c</fullName>
        <description>Discount amount; could be either in percentage or absolute amount</description>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__DiscountType__c</fullName>
        <description>This field is populated using a value from the DiscountType Custom Setting.</description>
        <label>Discount Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>Today() + 60</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__MaxUse__c</fullName>
        <description>Max Use</description>
        <label>Max Use</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__MinQty__c</fullName>
        <description>Minimum Quantity to be qualified for discount</description>
        <label>Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleName__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; ccrz__Rule__c ,ccrz__Rule__r.ccrz__Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rule Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__RuleType__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CartTotal</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rule</label>
        <referenceTo>ccrz__E_Rule__c</referenceTo>
        <relationshipName>E_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceMinQty__c</fullName>
        <description>Source Minimum Quantity</description>
        <label>Source Minimum Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Coupons1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceRelation__c</fullName>
        <label>Source Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SPEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SourceSpecMiniQty__c</fullName>
        <label>Source Spec Minimum Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceSpecValue__c</fullName>
        <description>Source Spec Value</description>
        <label>Source Spec Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SourceSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A reference to source spec</description>
        <label>Source Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>CC Coupons</relationshipLabel>
        <relationshipName>CC_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <label>Storefront</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DefaultStore</fullName>
                </value>
                <value>
                    <fullName>SoftwareStore</fullName>
                </value>
                <value>
                    <fullName>CSSNAStore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__TargetProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipName>E_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TargetQty__c</fullName>
        <label>Target Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__TargetRelation__c</fullName>
        <description>Target relation type</description>
        <label>Target Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SPEC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__TargetSpecQty__c</fullName>
        <label>Target Spec Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__TargetSpecValue__c</fullName>
        <label>Target Spec Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TargetSpec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>CC Coupons (Target Spec)</relationshipLabel>
        <relationshipName>CC_Coupons_TargetSpec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__TotalUsed__c</fullName>
        <description>Total Used</description>
        <label>Total Used</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dbu_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be used for sending dbu Gift Coupon.</description>
        <inlineHelpText>To be used for sending dbu Gift Coupon.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CC Coupons</relationshipLabel>
        <relationshipName>CC_Coupons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dbu_Gift_Card_Remaining_Balance__c</fullName>
        <formula>IF(ccrz__CartTotalAmount__c &gt;=  ccrz__DiscountAmount__c, 0,  ccrz__DiscountAmount__c - ccrz__CartTotalAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dbu Gift Card Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dbu_Promo_code__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Promo code</description>
        <label>dbu Promo code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dbu_storeLanguage__c</fullName>
        <label>dbu storeLanguage</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>CC Coupon</label>
    <listViews>
        <fullName>BusinessAdminCoupon</fullName>
        <columns>NAME</columns>
        <columns>ccrz__CouponCode__c</columns>
        <columns>ccrz__TotalUsed__c</columns>
        <columns>ccrz__DiscountAmount__c</columns>
        <columns>DN_Discount__c</columns>
        <columns>Subscription_Migration_Coupon__c</columns>
        <columns>ccrz__TargetProduct__c</columns>
        <columns>ccrz__MinQty__c</columns>
        <filterScope>Everything</filterScope>
        <label>BusinessAdminCoupon</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CSSNAStore_Coupons</fullName>
        <columns>NAME</columns>
        <columns>ccrz__CouponName__c</columns>
        <columns>ccrz__MaxUse__c</columns>
        <columns>ccrz__TotalUsed__c</columns>
        <columns>ccrz__StartDate__c</columns>
        <columns>ccrz__EndDate__c</columns>
        <columns>ccrz__CouponType__c</columns>
        <columns>ccrz__CartTotalAmount__c</columns>
        <columns>ccrz__DiscountAmount__c</columns>
        <columns>ccrz__CouponCode__c</columns>
        <columns>ccrz__DiscountType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DBU_Promotion__c</columns>
        <columns>dbu_Promo_code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ccrz__Storefront__c</field>
            <operation>equals</operation>
            <value>CSSNAStore</value>
        </filters>
        <label>CSSNAStore Coupons</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__CouponCode__c</columns>
        <columns>ccrz__Coupon_Notes__c</columns>
        <columns>ccrz__RuleType__c</columns>
        <columns>ccrz__TotalUsed__c</columns>
        <columns>ccrz__SourceProduct__c</columns>
        <columns>ccrz__TargetProduct__c</columns>
        <columns>ccrz__DiscountType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Coupon Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Coupons</pluralLabel>
    <recordTypes>
        <fullName>MSRP_Coupon</fullName>
        <active>true</active>
        <label>MSRP Coupon</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSRP_DN_Coupon</fullName>
        <active>true</active>
        <label>MSRP &amp; DN Coupon</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Coupon_Type_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Text( ccrz__CouponType__c )==Null &amp;&amp; INCLUDES( ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please select Coupon Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DN_Value_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( DN_Discount__c ) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please Enter 0 in DN price discount field &quot;DN Discount&quot;,Do not leave blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DN_value_check_for_MSRP_coupon</fullName>
        <active>true</active>
        <errorConditionFormula>Text(OSM_Coupon_Discount_Target_Type__c) ==&apos;MSRP&apos; &amp;&amp;  DN_Discount__c &gt;0 &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>You can not set DN Discount value for MSRP coupon</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Discount_Type_check</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(ccrz__DiscountType__c) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>You can not leave Discount Type field blank,Either choose Absolute or Percentage as per value selected in Coupon Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MSRP_Value_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ccrz__DiscountAmount__c) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please enter a value or “0” in field “ Discount Amount” . Do not leave blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MSRP_value_check_for_DN_coupon</fullName>
        <active>true</active>
        <errorConditionFormula>(TEXT( OSM_Coupon_Discount_Target_Type__c)==&apos;DN&apos; ) &amp;&amp;  ccrz__DiscountAmount__c &gt;0 &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>You can not set MSRP Discount value for DN coupon</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_Type_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Text(ccrz__RuleType__c)==Null &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please select Rule Type General</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_Type_Check_Cart_Total</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( ccrz__RuleType__c ) ==&apos;CartTotal&apos; &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>You can not select Cart Total in Rule Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_Type_Check_Shipping</fullName>
        <active>true</active>
        <errorConditionFormula>Text( ccrz__RuleType__c )==&apos;Shipping&apos; &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>You can not select Shipping in Rule Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Storefront_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(ccrz__Storefront__c)|| ISNULL(ccrz__Storefront__c)</errorConditionFormula>
        <errorMessage>Please select Storefront value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Product_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBlank(ccrz__TargetProduct__c) &amp;&amp; ISPICKVAL( ccrz__RuleType__c , &apos;General&apos;) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please select Product in target product field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Quantity_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBlank( Text(ccrz__TargetQty__c)) &amp;&amp; ISPICKVAL( ccrz__RuleType__c , &apos;General&apos;) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please enter value in Target Quantity and also select product record in Target Product field if it is blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Target_Relation_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBlank( Text( ccrz__TargetRelation__c  )) &amp;&amp;  ISPICKVAL( ccrz__RuleType__c , &apos;General&apos;) &amp;&amp; INCLUDES(ccrz__Storefront__c ,&apos;SoftwareStore&apos;)</errorConditionFormula>
        <errorMessage>Please select value &quot;Product&quot;  in Target Relation and also select product record in Target Product field if it is blank</errorMessage>
    </validationRules>
</CustomObject>